{
    "name": "UnitInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "49d8ef16-a115-4d16-81b3-7a8042f1b8b7",
            "actions": [
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "032ac3cf-664e-40cb-aa37-d5135de66a2d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "6423fac2-4776-4578-a88b-96ea2bd7cdf4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "d561e2af-425b-4b01-a2a3-13c25d2abd83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "fb12f3cd-f629-4a47-b105-a85161d0871e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c109e513-5391-48af-8843-c6505f2f85ff",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "97b19369-b913-44fb-a1a3-b7c7c429c80c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47182104-8943-4c9a-8378-2e97f31d9d3e",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d42a2f7a-a5aa-47be-a0e7-ddc1a57db49f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}